--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: nechaara <nechaara.student.s19.be>         +#+  +:+       +#+         #
+#    By: nechaara <nechaara@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/23 23:42:33 by nechaara          #+#    #+#              #
-#    Updated: 2024/07/10 15:38:30 by nechaara         ###   ########.fr        #
+#    Updated: 2024/07/12 16:53:39 by nechaara         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
