--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: nechaara <nechaara@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/23 23:42:33 by nechaara          #+#    #+#              #
-#    Updated: 2024/07/15 15:58:16 by nechaara         ###   ########.fr        #
+#    Updated: 2024/07/17 12:04:07 by nechaara         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,6 +16,10 @@ OBJ_DIR = objects
 SRCS = tests.cpp Account.cpp
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:%.cpp=%.o))
 FLAGS = -std=c++98 -Wall -Wextra -Werror
+
+# CAN BE CHANGED BY THE CORRECTOR
+
+LOG_FILE_NAME = test.log
 
 all : $(NAME)
 
@@ -36,6 +40,17 @@ fclean: clean
 	@rm -f $(NAME)
 	@echo "Cleaned executable."
 
+diff: all
+	@awk -F '] ' '{print $$2}' $(LOG_FILE_NAME) > l1
+	@./$(NAME) | awk -F "] " '{print $$2}' > l2
+	@echo "Checking differences between files"
+	@if diff l1 l2; then \
+		echo "Test passed: No differences found."; \
+	else \
+		echo "Test failed: Differences found."; \
+	fi
+	@rm l1 l2
+	
 re: fclean all
 
 .PHONY: all clean fclean re
